# OpenglTuts

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenglTutus.cpp  OpenglTutus.h  README.md
lib/glew-2.1.0/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
lib/glew-2.1.0/lib/Release/x64/: glew32.exp  glew32.lib  glew32s.lib
src/: OpenglTutus.cpp
